--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-ap",
   "version": "1.0.0",
-  "main": "expo/AppEntry.js",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,10 +9,28 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.2",
+    "@react-navigation/material-top-tabs": "^6.6.13",
+    "@react-navigation/native": "^6.1.17",
     "expo": "~51.0.7",
+    "expo-brightness": "~11.8.0",
+    "expo-constants": "~15.4.6",
+    "expo-device": "~5.9.4",
+    "expo-location": "~16.5.5",
+    "expo-notifications": "^0.27.7",
+    "expo-screen-orientation": "~6.4.1",
+    "expo-sensors": "~12.9.1",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.74.1"
+    "react-native": "0.74.1",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-circular-progress": "^1.4.0",
+    "react-native-maps": "^1.10.0",
+    "react-native-pager-view": "^6.2.3",
+    "react-native-paper": "^4.9.2",
+    "react-native-safe-area-context": "^4.8.2",
+    "react-native-svg": "^14.1.0",
+    "react-native-tab-view": "^3.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
